# 3DViewer2.0

./: CMakeLists.txt  CPUTransformation.cc  Doxyfile.txt  Makefile  README.md  TODO.txt  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  settings.cc  settings.h  shaders.qrc
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-6aa8e5f432be96a9cb04.json  cmakeFiles-v1-38df15b2a0d10eca6221.json  cmakeFiles-v1-5c5e957d038961c8d268.json  cmakeFiles-v1-ce084e42ea40fa3813d7.json  codemodel-v2-a19cfa4936ab2a4ed136.json  codemodel-v2-d6cf8343b537423cc857.json  codemodel-v2-dae882bce658720b3fc1.json  codemodel-v2-f0a8fb90689740dab8f3.json  index-2023-08-31T19-54-58-0588.json  index-2023-09-05T12-35-36-0888.json  index-2023-09-09T08-53-02-0274.json  index-2023-09-09T17-09-34-0783.json  target-gpt_help-Debug-5ff4c22c11a6da7c892a.json  target-gpt_help-Debug-64b060980c02c9f9b5df.json  target-gpt_help-Debug-9491ed22ed281138e3f8.json
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-49d91a7a621fb3bc1afc.json  codemodel-v2-61afa3cd5e6cb82165cc.json  codemodel-v2-84d0f1b95589934d670b.json  codemodel-v2-9cfa4963aa44100709d9.json  codemodel-v2-d1ca6ed9c6a25a83a98a.json  index-2023-08-31T16-55-25-0737.json  index-2023-09-05T12-35-27-0538.json  index-2023-09-07T12-21-21-0321.json  index-2023-09-08T20-49-29-0484.json  target-gpt_help-Debug-2179815269a755a4dac2.json  target-gpt_help-Debug-48117b02d881d119c643.json  target-gpt_help-Debug-a0b38e0a89cee60f11bf.json  target-gpt_help-Debug-c67038f629cd50ac4264.json  target-gpt_help-Debug-ddd50e16267d9de3a18a.json  target-gpt_help_autogen-Debug-7552985d96c38c37995e.json
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: AffineRotation.cc.1194ABFCA67519C0.idx  AffineRotation.h.87254457B34055F5.idx  AffineScaling.cc.74DE3D15677715A3.idx  AffineScaling.h.58D5700F3255F29A.idx  AffineTranslation.cc.5FEBCF97DD47AAA3.idx  AffineTranslation.h.1C7BAF0D3C13CE92.idx  CPUTransformation.cc.B60E4E0234F12B85.idx  CPUTransformation.h.691A303D459D687B.idx  OpenGLRotation.cc.D076A42492ADA081.idx  OpenGLRotation.h.FF8462FDFBA4A75C.idx  OpenGLScaling.cc.25DE5E4F3EA9EE10.idx  OpenGLScaling.h.8A58CAF9100F5720.idx  OpenGLTransformation.cc.0243A48527C3E9F7.idx  OpenGLTransformation.h.93B58D82C94AD503.idx  OpenGLTranslation.cc.4166114015F5BAF3.idx  OpenGLTranslation.h.449A7A2CA4757A1F.idx  OpenGL_rotation.cc.1F5670304A8F2A97.idx  OpenGL_rotation.h.7D89A93B68C9467C.idx  OpenGL_scaling.cc.EA6BF521B4B00228.idx  OpenGL_scaling.h.4E63966A1E2BC173.idx  OpenGL_translation.cc.2E760604F511357D.idx  OpenGL_translation.h.114293EF064F4D77.idx  QCloseEvent.430A9887A5EE1BE6.idx  QColorDialog.CB05C1C52259B570.idx  QDir.B529184C9F20A49D.idx  QFile.9C207D07FFE1A947.idx  QFileDialog.7FEA07068FFB7D6C.idx  QFontDatabase.B46183CA30581D77.idx  QJsonArray.CFCAABC188DFA008.idx  QJsonDocument.36826ADA729F5B03.idx  QJsonObject.44721A6F3B3536D9.idx  QJsonValue.CE66C2504C84AEB7.idx  QMatrix4x4.00B4E79BA2DF5BB8.idx  QMovie.011BAC50E4D5F62D.idx  QObject.A60FB15A859B9B4C.idx  QOpenGLBuffer.8EDA076FDCC5E818.idx  QOpenGLFunctions.0DD070956E781BD0.idx  QOpenGLShaderProgram.EA817169D30683E5.idx  QOpenGLVertexArrayObject.307BF7CCA07433F1.idx  QOpenGLWidget.96332055DB279A43.idx  (+125 more)
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help.app/Contents/: Info.plist
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help.app/Contents/MacOS/: gpt_help
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help_autogen/: mocs_compilation.cpp
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help_autogen/54WNFGSGJX/: qrc_shaders.cpp
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help_autogen/5QF3R2FZUP/: moc_model.cpp  moc_model.cpp.d  moc_parser.cpp  moc_parser.cpp.d
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_widget.cpp  moc_widget.cpp.d  qrc_style.cpp
build-view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/gpt_help_autogen/include/: ui_mainwindow.h
controller/: controller.cc  controller.h
model/: CPUTransformation.cc  CPUTransformation.h  OpenGLTransformation.cc  OpenGLTransformation.h  ShaderCustomizableLines.h  ShaderNoGeometry.h  ShaderPointsOnly.h  ShaderState.h  ShadersEverythingButSlow.h  TransformationStrategy.h  model.cc  model.h  parser.cc  parser.h  settings.cc  settings.h  widget.cc  widget.h
model/Affines/: CPUTransformation.cc  CPUTransformation.h  GPUTransformation.cc  GPUTransformation.h  TransformationStrategy.h
resources/: FragShader.txt  FragShader1.txt  FragShaderNoGeometry.txt  FragShaderNoGeometryFlat.txt  FragShaderPointsOnly.txt  GeometryShader.txt  GeometryShaderCustomizableLines.txt  GeometryShaderLines.txt  GeometryShaderPointsOnly.txt  LightFragShader.txt  LightVertexShader.txt  VertexShader.txt  VertexShader1.txt  VertexShaderCPU.txt  VertexShaderCPU.vsh  VertexShaderFlat.txt
utility/: datastructure.h  earcutting.cc  earcutting.h
view/: CMakeLists.txt  ShaderFactory.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  settings.cc  settings.h  style.qrc  widget.cc  widget.h
view/ShaderStates/: ShaderCustomizableLines.h  ShaderEverythingButSlow.h  ShaderNoGeometry.h  ShaderPointsOnly.h  ShaderState.h
view/style/: style.ss
